<resources>
    <string name="app_name">App-rendamos</string>

    <!-- LOGIN ACTIVITY -->
    <string name="Login_Bienvenido">Bienvenido</string>
    <string name="Login_Instruccion">Introduzca sus credenciales</string>
    <string name="Login_Username">DNI</string>
    <string name="Login_Password">Contraseña</string>
    <string name="Login_LoginButton">Ingresar</string>

    <!-- -->
    <string name="MenuNormalUser_VerLista">Ver Lista</string>
    <string name="MenuNormalUser_ConsultarFormulario">Consultar Formulario</string>
    <string name="MenuNormalUser_RegistrarResultados">Registrar Resultados</string>
    <string name="MenuNormalUser_CrearPlanAccion">Crear Plan de Accion</string>
    <string name="MenuNormalUser_ListarCuestionarios">Listar Cuestionarios</string>
    <string name="MenuNormalUser_ResultadosHistoricos">Consultar Resultados Historicos</string>
    <string name="MenuNormalUser_ConsultPlanesAccion">Consultar Planes de Accion</string>
    <string name="MenuNormalUser_CerrarSesion">Cerrar Sesion</string>

    <string name="btnSalir">Salir</string>

    <!-- LISTA ESTUDIANTES -->
    <string name="ListaEstudiantes_title">Lista de Estudiantes</string>
    <string name="ListaEstudiantes_subtitle">Click en un nombre para ver detalles</string>
    <string name="ListaEstudiantes_header1">Nombre</string>
    <string name="ListaEstudiantes_header2">ASQ-3</string>

    <!-- CICLO DESARROLLO -->
    <string name="CicloDesarrollo_title">Ciclo de Desarrollo Integral</string>
    <string name="CicloDesarrollo_infoHeader">Info. de Niño/a</string>
    <string name="CicloDesarrollo_nombre">Nombre:</string>
    <string name="CicloDesarrollo_dob">Fecha Nacimiento:</string>
    <string name="CicloDesarrollo_gender">Género:</string>
    <string name="CicloDesarrollo_joinDate">Fecha Ingreso:</string>
    <string name="CicloDesarrollo_earlyBirth">Semanas prematuras:</string>
    <string name="CicloDesarrollo_classYear">Año:</string>
    <string name="CicloDesarrollo_section">Sección:</string>
    <string name="CicloDesarrollo_status">Status:</string>
    <string name="CicloDesarrollo_claseHeader">Info. de Clase</string>
    <string name="CicloDesarrollo_btnRegistrarResult">Registrar Resultado ASQ-3</string>
    <string name="CicloDesarrollo_btnCrearPlanAccion">Crear Plan de Accion</string>
    <string name="CicloDesarrollo_btnMostrarLista">Mostrar Lista ASQ-3 Registrados</string>
    <string name="CicloDesarrollo_btnEditarResults">Editar Resultados ASQ-3</string>
    <string name="CicloDesarrollo_btnConsultResults">Consultar Resultados Historicos ASQ-3</string>
    <string name="CicloDesarrollo_btnConsultPlanes">Consultar Planes de Accion</string>

    <!-- REGISTRAR RESULTADOS -->
    <string name="RegistrarResults_title">Registrar Resultados de ASQ-3</string>
    <string name="RegistrarResults_fechaApl">Fecha de aplicacion:</string>
    <string name="RegistrarResults_formName">Nombre de \ncuestionario:</string>
    <string name="RegistrarResults_areas">Areas de cuestionario:</string>
    <string name="RegistrarResults_btnCancelar">Cancelar</string>
    <string name="RegistrarResults_btnGuardar">Guardar</string>

    <!-- TEST AREA LAYOUT -->
    <string name="TestArea_pregunta1">Pregunta 1:</string>
    <string name="TestArea_pregunta2">Pregunta 2:</string>
    <string name="TestArea_pregunta3">Pregunta 3:</string>
    <string name="TestArea_pregunta4">Pregunta 4:</string>
    <string name="TestArea_pregunta5">Pregunta 5:</string>
    <string name="TestArea_pregunta6">Pregunta 6:</string>
    <string name="TestArea_total">Total:</string>
    <string name="TestArea_estado">Estado:</string>
    <string name="title_activity_plan_accion">PlanAccionActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    <string name="hintDate">dd-mm-yyyy</string>
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="plan_de_acci_n">Plan de acción</string>
</resources>
