<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:background="@drawable/layoutborder"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/TestArea_imgState"
        android:layout_width="46dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:tint="@color/testIconRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_total"
        app:srcCompat="@drawable/ic_areastate" />

    <Spinner
        android:id="@+id/TestArea_spnRespuesta6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/puntaje"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TestArea_txtPregunta6"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta5" />

    <Spinner
        android:id="@+id/TestArea_spnRespuesta5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/puntaje"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TestArea_txtPregunta5"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta4" />

    <Spinner
        android:id="@+id/TestArea_spnRespuesta4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/puntaje"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TestArea_txtPregunta4"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta3" />

    <Spinner
        android:id="@+id/TestArea_spnRespuesta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/puntaje"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TestArea_txtPregunta3"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta2" />

    <Spinner
        android:id="@+id/TestArea_spnRespuesta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/puntaje"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TestArea_txtPregunta2"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta1" />

    <Spinner
        android:id="@+id/TestArea_spnRespuesta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/puntaje"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/TestArea_txtPregunta1"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtTitulo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/TestArea_estado"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/TestArea_txtPregunta6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/TestArea_pregunta6"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta5" />

    <TextView
        android:id="@+id/TestArea_txtPregunta5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/TestArea_pregunta5"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta4" />

    <TextView
        android:id="@+id/TestArea_txtPregunta4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/TestArea_pregunta4"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta3" />

    <TextView
        android:id="@+id/TestArea_txtPregunta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/TestArea_pregunta3"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta2" />

    <TextView
        android:id="@+id/TestArea_txtPregunta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/TestArea_pregunta2"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta1" />

    <TextView
        android:id="@+id/TestArea_txtPregunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/TestArea_pregunta1"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtTitulo"
        android:fontFamily="@font/quicksand" />

    <TextView
        android:id="@+id/TestArea_txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/multicolore"
        android:textAlignment="center"
        android:textColor="@color/colorPurple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Placeholder" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/multicolore"
        android:text="@string/TestArea_total"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta6" />

    <TextView
        android:id="@+id/TestArea_total"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/multicolore"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/TestArea_txtPregunta6"
        tools:text="0" />

</androidx.constraintlayout.widget.ConstraintLayout>